maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: ':' expected but ')' found.
                    {def isDirectionFree(dir):Boolean={var x=getDirection();
                                            ^PledgeMaze:7: error: identifier expected but '}' found.
                                    set Direction(x); return (false)}}
                                                                     ^